Master/latest updates
- Redirect to latest stable by default
- Display warning text if you're looking at master

Signed-off-by: Andy Goldstein <andy.goldstein@gmail.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
           <ul>
           {% assign original_version = page.version | prepend: '/' | append: '/' %}
           {% assign master_url = page.url | replace: original_version, '/master/' | relative_url %}
+          {% assign latest_url = page.url | replace: original_version, site.latest | relative_url %}
           <li><a href="{{ master_url }}">master</a></li>
           {% for version in site.versions %}
             {% assign new_version = version | prepend: '/' | append: '/' %}
