fixed navigation scroll and added hamburger menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header class="sticky-header">
   <div class="logo-version--container">
+    <img class="icon--menu" src="{{'/assets/img/icon-menu.svg' | relative_url }}" alt="github">
     <a href="{{ page.version | relative_url }}">
       <img src="{{'/assets/img/logo.svg' | relative_url }}" alt="">
       <h1>Heptio <span>{{ site.name | capitalize }}</span></h1>
