--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navigation">
   <!-- If new pages are added to the site and the TOC needs to be updated, it
   can be overridden, using toc-mapping.yml -->
   {% assign tocTemplateName = site.data.toc-mapping[page.version] %}
