--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,6 @@
 {% seo %}
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -26,4 +25,5 @@
 
       {% include google-analytics.html %}
   </body>
+  <script src="{{'/assets/js/scripts.js' | relative_url }}"></script>
 </html>
