add docs site for 0.10 beta release
Signed-off-by: JENNIFER RONDEAU <jrondeau@heptio.com>

--- a/_includes/version-warning.html
+++ b/_includes/version-warning.html
@@ -7,6 +7,15 @@
     <a href="{{latest_url}}">latest version</a>.
     </p>
   </div>
+{% elsif page.version == 'v0.10.0-beta.1' %}
+  <div class="version-warning">
+    <p>
+    <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+    This is the documentation for the latest beta version of Ark. Both code and docs may be
+    unstable, and these docs only a best-guess effort at being up to date or correct. See the
+    <a href="{{latest_url}}">latest version</a>.
+    </p>
+  </div>
 {% elsif page.version != site.latest %}
   <div class="version-warning">
     <p>
