--- a/_includes/version-warning.html
+++ b/_includes/version-warning.html
@@ -1,3 +1,4 @@
+
 {% if page.version == 'master' %}
   <div class="version-warning">
     <p>
@@ -7,7 +8,7 @@
     <a href="{{latest_url}}">latest version</a>.
     </p>
   </div>
-{% elsif page.version == 'v0.10.0-beta.1' %}
+{% elsif page.version contains 'beta' %}
   <div class="version-warning">
     <p>
     <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
