Remove Heptio from navbar
Signed-off-by: Andy Goldstein <goldsteina@vmware.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <img class="icon--menu" src="{{'/assets/img/icon-menu.svg' | relative_url }}" alt="github">
     <a href="{{ page.version | relative_url }}">
       <img src="{{'/assets/img/logo.svg' | relative_url }}" alt="">
-      <h1>Heptio <span>{{ site.name | capitalize }}</span></h1>
+      <h1>{{ site.name | capitalize }}</h1>
     </a>
 
     <span class="version-selector">
