Update navbar color
Signed-off-by: Andy Goldstein <goldsteina@vmware.com>

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -160,7 +160,7 @@ li {
 }
 
 header {
-  background: #2C67EF;
+  background: #0095d3;
   display: flex;
   justify-content: space-between;
   height: 48px;
