--- a/_includes/version-warning.html
+++ b/_includes/version-warning.html
@@ -3,7 +3,7 @@
   <div class="version-warning">
     <p>
     <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-    This is the documentation for the latest development version of Ark. Both code and docs may be
+    This is the documentation for the latest development version of Velero. Both code and docs may be
     unstable, and these docs are not guaranteed to be up to date or correct. See the
     <a href="{{latest_url}}">latest version</a>.
     </p>
@@ -24,6 +24,21 @@
     Documentation for version {{ page.version }} is no longer actively maintained.
     The version you are currently viewing is a static snapshot.
     For up-to-date documentation, see the <a href="{{latest_url}}">latest version</a>.
+    </p>
+    <p>
+    <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+    Heptio Ark is now Velero! We’re working on our first release as Velero, as well as instructions
+    for migrating your Ark deployments and data to Velero. Stay tuned! For more details on the
+    renaming, please read our <a href="https://blogs.vmware.com/cloudnative/2019/02/05/welcoming-heptio-open-source-projects-to-vmware/">blog post</a>.
+    </p>
+  </div>
+{% elsif page.version == site.latest %}
+  <div class="version-warning">
+    <p>
+    <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+    Heptio Ark is now Velero! We’re working on our first release as Velero, as well as instructions
+    for migrating your Ark deployments and data to Velero. Stay tuned! For more details on the
+    renaming, please read our <a href="https://blogs.vmware.com/cloudnative/2019/02/05/welcoming-heptio-open-source-projects-to-vmware/">blog post</a>.
     </p>
   </div>
 {% endif %}
