Update docs for v0.11
Signed-off-by: Carlisia <carlisiac@vmware.com>

--- a/_includes/version-warning.html
+++ b/_includes/version-warning.html
@@ -27,18 +27,18 @@
     </p>
     <p>
     <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-    Heptio Ark is now Velero! We’re working on our first release as Velero, as well as instructions
-    for migrating your Ark deployments and data to Velero. Stay tuned! For more details on the
-    renaming, please read our <a href="https://blogs.vmware.com/cloudnative/2019/02/05/welcoming-heptio-open-source-projects-to-vmware/">blog post</a>.
+    Heptio Ark is now Velero! v0.11 is our first release with the new name. For instructions on 
+    migrating your Ark deployments and data to Velero, please see the Upgrade section in the <a href="{{latest_url}}">latest version</a>.
+    For more details on the renaming, please read our <a href="https://blogs.vmware.com/cloudnative/2019/02/05/welcoming-heptio-open-source-projects-to-vmware/">blog post</a>.
     </p>
   </div>
 {% elsif page.version == site.latest %}
   <div class="version-warning">
     <p>
     <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-    Heptio Ark is now Velero! We’re working on our first release as Velero, as well as instructions
-    for migrating your Ark deployments and data to Velero. Stay tuned! For more details on the
-    renaming, please read our <a href="https://blogs.vmware.com/cloudnative/2019/02/05/welcoming-heptio-open-source-projects-to-vmware/">blog post</a>.
+    Heptio Ark is now Velero! v0.11 is our first release with the new name. For instructions on 
+    migrating your Ark deployments and data to Velero, please see the Upgrade section in the <a href="{{latest_url}}">latest version</a>.
+    For more details on the renaming, please read our <a href="https://blogs.vmware.com/cloudnative/2019/02/05/welcoming-heptio-open-source-projects-to-vmware/">blog post</a>.
     </p>
   </div>
 {% endif %}
