Add site for v1.0.0-alpha.2
* Make the site for v1.0.0-alpha.2
* Update version warning header to include logic for alphas

Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/_includes/version-warning.html
+++ b/_includes/version-warning.html
@@ -8,11 +8,11 @@
     <a href="{{latest_url}}">latest version</a>.
     </p>
   </div>
-{% elsif page.version contains 'beta' %}
+{% elsif page.version contains 'beta' or page.version contains 'alpha' %}
   <div class="version-warning">
     <p>
     <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-    This is the documentation for the latest beta version of Ark. Both code and docs may be
+    This is the documentation for the latest pre-production version of Velero. Both code and docs may be
     unstable, and these docs only a best-guess effort at being up to date or correct. See the
     <a href="{{latest_url}}">latest version</a>.
     </p>
