update v1.0.0-rc.1 docs site
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/_includes/version-warning.html
+++ b/_includes/version-warning.html
@@ -8,7 +8,7 @@
     <a href="{{latest_url}}">latest version</a>.
     </p>
   </div>
-{% elsif page.version contains 'beta' or page.version contains 'alpha' %}
+{% elsif page.version contains 'beta' or page.version contains 'alpha' or page.version contains 'rc' %}
   <div class="version-warning">
     <p>
     <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
