Updates to footer
Signed-off-by: Lee Springer <lee@smalltalk.agency>

--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -34,7 +34,7 @@
         <div class="row align-items-center">
           <div class="col copyright text-center text-md-right mt-4">
             &copy; {{ site.time | date: '%Y' }} {{ site.author }}.
-            <a href="{{ site.footer.vm-link }}" class="vm-logo">A VMware backed project. <img src="/img/{{ site.vm_logo }}" /></a>
+            <a href="{{ site.footer.vm-link }}" class="vm-logo">A VMware-backed project. <img src="/img/{{ site.vm_logo }}" /></a>
           </div>
         </div>
     </div>
