--- a/site/_scss/site/common/_type.scss
+++ b/site/_scss/site/common/_type.scss
@@ -41,6 +41,11 @@ pre {
   font-size: $code-font-size;
   color: $pre-color;
   background-color: #f2f2f2;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+
 
   // Account for some code outputs that place code tags in pre tags
   code {
