--- a/site/_scss/site/common/_type.scss
+++ b/site/_scss/site/common/_type.scss
@@ -36,3 +36,21 @@ h5 {
 strong {
   font-weight: $font-weight-semibold;
 }
+pre {
+  display: block;
+  font-size: $code-font-size;
+  color: $pre-color;
+  background-color: #f2f2f2;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+
+
+  // Account for some code outputs that place code tags in pre tags
+  code {
+    font-size: inherit;
+    color: inherit;
+    word-break: normal;
+  }
+}
