--- a/site/_includes/site-header.html
+++ b/site/_includes/site-header.html
@@ -9,6 +9,7 @@
             <li class="blog"><a href="/blog" title="Blog Posts">Blog</a></li>
             <li class="community"><a href="/community" title="Community">Community</a></li>
             <li class="resources"><a href="/resources" title="Resources">Resources</a></li>
+            <li class="survey"><a href="/survey" title="Survey">Survey</a></li>
         </ul>
         <div class="nav-mobile-link">
             <a href="javascript:void(0);" id="nav-mobile-toggle"></a>
