Modifies documentation to use a wider layout; adds better md table formatting
Signed-off-by: Colin Bayer <ccbayer@gmail.com>

--- a/site/_scss/_styles.scss
+++ b/site/_scss/_styles.scss
@@ -10,6 +10,7 @@
 
 // Layouts
 @import "./site/layouts/container";
+@import "./site/layouts/documentation";
 
 // Objects
 @import "./site/objects/header";
