--- a/site/_layouts/docs.html
+++ b/site/_layouts/docs.html
@@ -16,28 +16,28 @@
   <div class="container-fluid site-outer-container">
     <div class="site-container">
       {% include site-header.html %}
-      <div class="post-single-hero bg-color-{{ site.hero.background-color }}">
+      <div class="post-single-hero post-single-hero-short bg-color-{{ site.hero.background-color }}">
         <div class="section">
             <div class="section-content">
               <h1>Documentation</h1>
             </div>
         </div>
       </div>
-        <div class="post-single-body">
-        <div class="section section-card">
-            <div class="section-content pt-4 pb-0">
-              <div class="row">
-                <div class="col-md-3">
-                {% include versions.html %}
-                {% include nav.html %}
-                </div>
-                <div class="col-md-8 offset-md-1">
-                {% include version-warning.html %}
+        <div class="section section-card pt-4 pb-0">
+          <div class="container container-max">
+            <div class="row">
+              <div class="col-md-3 toc">
+              {% include versions.html %}
+              {% include nav.html %}
+              </div>
+              <div class="col-md-8">
+              {% include version-warning.html %}
+              <div class="documentation-container">
                 {{ content }}
-                </div>
+              </div>
               </div>
             </div>
-        </div>
+          </div>
         </div>
       {% include footer.html %}
     </div>
