--- a/site/_includes/plugins.html
+++ b/site/_includes/plugins.html
@@ -5,29 +5,64 @@
             <div class="col-md">
                 <div class="card card-light mb-3 mb-md-0 shadow-sm">
                   <div class="card-body match-height">
-                    {% if plugin.link.size > 0 %}
-                    <h5><a href="{{ plugin.link }}" class="dark">{{ plugin.title }}</a></h5>
-                    {% else %}
-                    <h5>{{ plugin.title }}</h5>
+                    {% if plugin.supported-by-velero-team == "true" %}
+                      {% if plugin.link.size > 0 %}
+                      <h5><a href="{{ plugin.link }}" class="dark">{{ plugin.title }}</a></h5>
+                      {% else %}
+                      <h5>{{ plugin.title }}</h5>
+                      {% endif %}
+                      <p>{{ plugin.content }}</p>
+                      {% if plugin.object-storage %}
+                        <img src="https://img.shields.io/badge/Object Storage-supported-green">
+                      {% endif %}
+                      {% if plugin.volumesnapshotter %}
+                        <img src="https://img.shields.io/badge/VolumeSnapshotter-supported-green">
+                      {% endif %}
+                      {% if plugin.local-storage %}
+                        <img src="https://img.shields.io/badge/Local Storage-supported-green">
+                      {% endif %}
+                      {% if plugin.supported-by-velero-team %}
+                        <img src="https://img.shields.io/badge/Supported%20By-Velero%20team-blue">
+                      {% endif %}
+                      {% if plugin.BackupItemAction %}
+                        <img src="https://img.shields.io/badge/BackupItemAction-supported-green">
+                      {% endif %}
+                      {% if plugin.RestoreItemAction %}
+                        <img src="https://img.shields.io/badge/RestoreItemAction-supported-green">
+                      {% endif %}
                     {% endif %}
-                    <p>{{ plugin.content }}</p>
-                    {% if plugin.object-storage %}
-                      <img src="https://img.shields.io/badge/Object Storage-supported-green">
-                    {% endif %}
-                    {% if plugin.volumesnapshotter %}
-                      <img src="https://img.shields.io/badge/VolumeSnapshotter-supported-green">
-                    {% endif %}
-                    {% if plugin.local-storage %}
-                      <img src="https://img.shields.io/badge/Local Storage-supported-green">
-                    {% endif %}
-                    {% if plugin.supported-by-velero-team %}
-                      <img src="https://img.shields.io/badge/Supported%20By-Velero%20team-blue">
-                    {% endif %}
-                    {% if plugin.BackupItemAction %}
-                      <img src="https://img.shields.io/badge/BackupItemAction-supported-green">
-                    {% endif %}
-                    {% if plugin.RestoreItemAction %}
-                      <img src="https://img.shields.io/badge/RestoreItemAction-supported-green">
+                  </div>
+                </div>
+                <div class="card card-light mb-3 mb-md-0 shadow-sm">
+                  <div class="card-body match-height">
+                    {% if plugin.supported-by-velero-team != "true" && plugin.prototype != "true" %}
+                      {% if plugin.link.size > 0 %}
+                      <h5><a href="{{ plugin.link }}" class="dark">{{ plugin.title }}</a></h5>
+                      {% else %}
+                      <h5>{{ plugin.title }}</h5>
+                      {% endif %}
+                      <p>{{ plugin.content }}</p>
+                      {% if plugin.object-storage %}
+                        <img src="https://img.shields.io/badge/Object Storage-supported-green">
+                      {% endif %}
+                      {% if plugin.volumesnapshotter %}
+                        <img src="https://img.shields.io/badge/VolumeSnapshotter-supported-green">
+                      {% endif %}
+                      {% if plugin.local-storage %}
+                        <img src="https://img.shields.io/badge/Local Storage-supported-green">
+                      {% endif %}
+                      {% if plugin.supported-by-velero-team %}
+                        <img src="https://img.shields.io/badge/Supported%20By-Velero%20team-blue">
+                      {% endif %}
+                      {% if plugin.BackupItemAction %}
+                        <img src="https://img.shields.io/badge/BackupItemAction-supported-green">
+                      {% endif %}
+                      {% if plugin.RestoreItemAction %}
+                        <img src="https://img.shields.io/badge/RestoreItemAction-supported-green">
+                      {% endif %}
+                      {% if plugin.prototype %}
+                        <img src="https://img.shields.io/badge/Prototype-yes-yellow">
+                      {% endif %}
                     {% endif %}
                   </div>
                 </div>
