--- a/site/_includes/head-docs.html
+++ b/site/_includes/head-docs.html
@@ -5,5 +5,6 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/css/styles.css?{{site.time | date: '%s%N'}}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" />
   {% seo %}
 </head>
