Fix contributor part of home page
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/hugo-site/layouts/index.html
+++ b/hugo-site/layouts/index.html
@@ -126,7 +126,7 @@
 
     <div class="section section-background-{{ $.Param "backgrounds.team" }}">
         <div class="section-content">
-            {% include contributors.html %}
+            {{ partial "contributors.html" . }}
         </div>
     </div>
 {{ end }}
