Render Features part of Home page
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/hugo-site/layouts/index.html
+++ b/hugo-site/layouts/index.html
@@ -102,8 +102,8 @@
                     <h2>Features</h2>
                 </div>
             </div>
-            {% assign limit = 3 %}
-            {% include case-studies-alternating.html %}
+            {{ .Scratch.Set "limit" "3" }}
+            {{ partial "case-studies-alternating.html" . }}
         </div>
     </div>
 
