--- a/hugo-site/layouts/partials/blog-posts.html
+++ b/hugo-site/layouts/partials/blog-posts.html
@@ -1,9 +1,15 @@
 <div class="row">
     {{ $limit := int (.Scratch.Get "limit") }}
-    {{ $posts := .Site.GetPage "/posts" }}
-    {{ range $index, $page := first $limit $posts.Resources }}
+    {{ $pages := (.Site.GetPage "/blog").Pages }}
+
+    {{ if gt $limit 0 }}
+        {{ $pages = first $limit $pages }}
+    {{ end }}
+
+    {{ range $index, $page := $pages }}
+        {{ partial "blog-post-card.html" . }}
+
         {{ $currentIndex := add $index 1 }}
-        {{ partial "blog-post-card.html" $page }}
         {{ $row := mod $currentIndex 3 }}
         {{ if (and (eq $row 0) (ne $currentIndex $limit)) }}
             </div>
