Fix latest release information link from home page and blog post formating
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/hugo-site/layouts/blog/single.html
+++ b/hugo-site/layouts/blog/single.html
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="post-single-meta-date">
-                        {{ .Params.date.Format  "January 01, 2006" }}
+                        {{ .Date.Format  "January 02, 2006" }}
                     </div>
                 </div>
 
