Fix usage of backgroundColor site variable
* also simplifies blog list layout

Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/hugo-site/layouts/_default/baseof.html
+++ b/hugo-site/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     <div class="site-container">
         {{ partial "site-header.html" . }}
         {{ block "main" . }}
-            <div class="post-single-hero bg-color-{{ .Site.Params.hero.backgroundColor }}">
+            <div class="post-single-hero bg-color-{{ $.Site.Params.hero.backgroundColor }}">
                 <div class="section">
                     <div class="section-content">
                         <h1>{{ .Title }}</h1>
