--- a/hugo-site/layouts/blog/single.html
+++ b/hugo-site/layouts/blog/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="post-single-hero bg-color-{{ .Site.Params.hero.backgroundColor }}">
+    <div class="post-single-hero bg-color-{{ $.Site.Params.hero.backgroundColor }}">
         <div class="section">
             <div class="section-content">
                 <h1>{{ .Title }}</h1>
