--- a/hugo-site/layouts/docs/docs.html
+++ b/hugo-site/layouts/docs/docs.html
@@ -16,7 +16,7 @@
 <div class="container-fluid site-outer-container">
     <div class="site-container">
         {{ partial "site-header.html" . }}
-        <div class="post-single-hero post-single-hero-short bg-color-{{ .Site.Params.hero.backgroundColor }}">
+        <div class="post-single-hero post-single-hero-short bg-color-{{ $.Site.Params.hero.backgroundColor }}">
             <div class="section">
                 <div class="section-content">
                     <h1>Documentation</h1>
