--- a/hugo-site/layouts/index.html
+++ b/hugo-site/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="home-hero bg-color-{{ .Site.Params.backgroundColor }}"
+    <div class="home-hero bg-color-{{ $.Site.Params.hero.backgroundColor }}"
          style="background-image: url('{{ $.Param "hero.banner" }}')">
         <div class="section">
             <div class="section-content">
