Move blog content under posts directory but keep url as /blog/
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/hugo-site/layouts/partials/blog-posts.html
+++ b/hugo-site/layouts/partials/blog-posts.html
@@ -1,6 +1,6 @@
 <div class="row">
     {{ $limit := int (.Scratch.Get "limit") }}
-    {{ $pages := (.Site.GetPage "/blog").Pages }}
+    {{ $pages := (.Site.GetPage "/posts").Pages }}
 
     {{ if gt $limit 0 }}
         {{ $pages = first $limit $pages }}
