--- a/hugo-site/layouts/_default/baseof.html
+++ b/hugo-site/layouts/_default/baseof.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-{{ partial "head.html" . }}
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    {{ $options := (dict "targetPath" "styles.css" "outputStyle" "compressed" "enableSourceMap" true) }}
+    {{ $styles := resources.Get "styles.scss" | toCSS $options | resources.Fingerprint }}
+    <link rel="stylesheet" href="{{ $styles.Permalink | relURL }}" integrity="{{ $styles.Data.Integrity }}">
+    {{ block "title" . }}<title>{{ .Site.Title }} {{ .Page.Title }}</title>{{ end }}
+    {{/* TODO: metadata generation  {% seo %}*/}}
+</head>
 <body id="{{ .CurrentSection.Params.id }}">
 <div class="container-fluid site-outer-container">
     <div class="site-container">
-        {{ partial "site-header.html" . }}
+        {{ .Render "site-header" }}
         {{ block "main" . }}
             <div class="post-single-hero bg-color-{{ $.Site.Params.hero.backgroundColor }}">
                 <div class="section">
@@ -24,7 +34,7 @@
                 </div>
             </div>
         {{ end }}
-        {{ partial "footer.html" . }}
+        {{ .Render "footer" }}
     </div>
 </div>
 </body>
