--- a/hugo-site/layouts/docs/docs.html
+++ b/hugo-site/layouts/docs/docs.html
@@ -15,7 +15,7 @@
 <body id="docs">
 <div class="container-fluid site-outer-container">
     <div class="site-container">
-        {{ partial "site-header.html" . }}
+        {{ .Render "site-header" }}
         <div class="post-single-hero post-single-hero-short bg-color-{{ $.Site.Params.hero.backgroundColor }}">
             <div class="section">
                 <div class="section-content">
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </div>
-        {{ partial "footer.html" . }}
+        {{ .Render "footer" }}
     </div>
 </div>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
