Add tag page to list posts from same Author
* Also refactors how we use blog-posts.html, making it just responsible of display

Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/hugo-site/layouts/index.html
+++ b/hugo-site/layouts/index.html
@@ -114,7 +114,7 @@
                     <h2>Blog Highlights</h2>
                 </div>
             </div>
-            {{ .Scratch.Set "limit" "3" }}
+            {{ .Scratch.Set "posts" (first 3 (.Site.GetPage "/posts").Pages) }}
             {{ partial "blog-posts.html" . }}
             <div class="row pt-5">
                 <div class="col text-center">
