Fix baseUrl not set correctly
Signed-off-by: Tony Batard <tbatard@pivotal.io>

--- a/site/layouts/_default/footer.html
+++ b/site/layouts/_default/footer.html
@@ -26,7 +26,7 @@
                             {{ end }}
                             {{ $link := .url }}
                             {{ if not (strings.HasPrefix .url "http") }}
-                                {{ $link = printf "%s%s" $.Site.BaseURL .url }}
+                                {{ $link = (.url | absURL) }}
                             {{ end }}
                             <a href="{{ $link }}">{{ .title }}</a>
                         </li>
