update shortcode commentn
Signed-off-by: Abigail McCarthy <mabigail@vmware.com>

--- a/site/layouts/shortcodes/table.html
+++ b/site/layouts/shortcodes/table.html
@@ -1,5 +1,5 @@
 <!--
-# Original youtube shortcode
+# Original table shortcode
 # https://github.com/kubernetes/website/blob/master/layouts/shortcodes/table.html
 -->
 {{ $hasCaption := isset .Params "caption" }}
