point to repo issues
Signed-off-by: Abigail McCarthy <mabigail@vmware.com>

--- a/site/layouts/404.html
+++ b/site/layouts/404.html
@@ -16,7 +16,7 @@
   <li> <a href="/resources">Resources</a></li>
 </ul>
 
-<p> If you can't find what you are looking for, try asking a question in our <a href="https://kubernetes.slack.com/messages/velero">slack channel</a> or <a href="{{.Site.Params.gh_repo}}">filing an issue.</a><p>
+<p> If you can't find what you are looking for, try asking a question in our <a href="https://kubernetes.slack.com/messages/velero">slack channel</a> or <a href="https://github.com/vmware-tanzu/velero/issues">filing an issue.</a><p>
 
 {{ end }}
 
