remove 404 from title
Signed-off-by: Abigail McCarthy <mabigail@vmware.com>

--- a/site/layouts/404.html
+++ b/site/layouts/404.html
@@ -4,6 +4,10 @@
 
 {{ end }}
 
+{{ define "title"}}
+<h1>Page Not Found</h1>
+{{ end }}
+
 {{ define "content"}}
 <p> Whoops! It looks like we weren't able to find that page.<p>
 
