--- a/site/assets/_scss/site/objects/_components.scss
+++ b/site/assets/_scss/site/objects/_components.scss
@@ -39,7 +39,7 @@
                 }
             }
             h3 {
-                margin-top: 0px;
+                margin: 0px;
                 text-align: center;
                 font-size: 16px;
             }
@@ -48,6 +48,10 @@
                 p {
                     font-size: 1rem;
                     color: #777;
+                    &.title {
+                        font-weight: 500;
+                        margin: 0px;
+                    }
                 }
                 ul {
                     padding-left: 20px;
