Review updates -Combine slack & twitter card -add blog & podcast icons -fit header font

--- a/site/assets/_scss/site/objects/_components.scss
+++ b/site/assets/_scss/site/objects/_components.scss
@@ -36,6 +36,12 @@
                 min-height: 140px;
                 img {
                     max-width:100%;
+                    &.podcast {
+                        max-height: 100px;
+                    }
+                }
+                &.twitter svg {
+                    margin-left: -25px;
                 }
             }
             h3 {
