--- a/site/assets/_scss/site/settings/_variables.scss
+++ b/site/assets/_scss/site/settings/_variables.scss
@@ -21,6 +21,7 @@ $card-border-width: 1px;
 $card-border-color: $border-color;
 
 $font-family-base: "Metropolis", Helvetica, Arial, sans-serif;
+$font-family-header: "Metropolis-light", Helvetica, sans-serif;
 $font-size-base: 1.125rem; // 18px
 
 $link-color: #007AB8;;
